[gd_scene load_steps=9 format=3 uid="uid://pltwuyymn3cn"]

[ext_resource type="Script" path="res://game_entry.gd" id="1_k30vb"]
[ext_resource type="PackedScene" uid="uid://sbg70yk34nwu" path="res://splash_screen.tscn" id="2_oj260"]
[ext_resource type="PackedScene" uid="uid://dswcv711cp8pt" path="res://main_level.tscn" id="2_pvwe0"]
[ext_resource type="PackedScene" uid="uid://ba7sfyxrhrekb" path="res://main_menu.tscn" id="3_l4ylh"]
[ext_resource type="PackedScene" uid="uid://cd61dwt110dxr" path="res://intro_cutscene_2.tscn" id="5_p2s7e"]
[ext_resource type="PackedScene" uid="uid://cch75rtm2opaa" path="res://outro_cutscene.tscn" id="6_udoor"]
[ext_resource type="PackedScene" uid="uid://dmh1wy1nimnw8" path="res://credits.tscn" id="7_pn1nm"]
[ext_resource type="PackedScene" uid="uid://bptldyp4hvog2" path="res://controls.tscn" id="8_bqtrb"]

[node name="GameEntry" type="Node"]
script = ExtResource("1_k30vb")
main_level_scene = ExtResource("2_pvwe0")

[node name="SplashScreen" parent="." instance=ExtResource("2_oj260")]

[node name="MainMenu" parent="." instance=ExtResource("3_l4ylh")]
visible = false

[node name="IntroCutscene" parent="." instance=ExtResource("5_p2s7e")]
visible = false

[node name="OutroCutscene" parent="." instance=ExtResource("6_udoor")]
visible = false

[node name="Credits" parent="." instance=ExtResource("7_pn1nm")]
visible = false

[node name="Controls" parent="." instance=ExtResource("8_bqtrb")]
visible = false

[connection signal="completed" from="SplashScreen" to="." method="_on_splash_screen_completed"]
[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="cutscene_complete" from="IntroCutscene" to="." method="_on_intro_cutscene_cutscene_complete"]
[connection signal="cutscene_complete" from="OutroCutscene" to="." method="_on_outro_cutscene_cutscene_complete"]
[connection signal="finished" from="Controls" to="." method="_on_controls_finished"]
